# DataBERT

./: EXPERIMENT.md  PROMPTS.md  Pipfile  README.md  TRAINING_DATAGEN.md  ipython_log.py  ipython_log.py.001~  pyproject.toml  st_app.py  test_processed_shortlist.py
data/annotated/: PWRP_annotated_DatastilBERT_v2.xlsx  databert_v1_ranked_pwrp.xlsx  training_data_annotated_datastilbert_v1.xlsx  training_data_annotated_v2.xlsx  training_data_datastilbert_annotated_positive_samples_v1.xlsx
data/openai/generated_sentences/: gpt-sents_t1682800801_chatcmpl-7AleLDe8F69A6nbiTg5LdXoda89R1.json  gpt-sents_t1682800953_chatcmpl-7AlgnFuwmbkBpTpaueunmfUig8k0L.json  gpt-sents_t1682800978_chatcmpl-7AlhCeweN86MCuxXGhKhAcaYQt5ql.json  gpt-sents_t1682801014_chatcmpl-7Alhmoc8j0A5oZrzGH0oH4MhB1Rts.json  gpt-sents_t1682801039_chatcmpl-7AliBigISEC5jChEYkfiWHiza5LhZ.json  (+195 more)
ipython_logs/: experiment_process_shortlists.py  gpt_generated_sentence_analysis.py
notebooks/modelling/: FineTuneBERT.ipynb  README.md  Second_Iteration_Train.ipynb
notebooks/ranking/: README.md  data_use.ipynb  evaluate_training_data.ipynb
scripts/: extract_wb_topics.py  generate_gpt_sentences.py  generate_gpt_structured_from_shortlist.py  generate_prwp_shortlist.py  process_shortlist.py
scripts/DataBERT/: DataBERT_pipeline.py
scripts/coleridge/: generate_coleridge_shortlist.py
scripts/prwp/: generate_prwp_shortlist.py
scripts/ranking/: gpt_label_ranking_data.py  process_gpt_labels.py  process_gpt_sentences.py
scripts/wb/: NOTES.md
scripts/wb/wb/: pdf.py  (+1 more)
src/data_use/: ranking.py  text_splitter.py
(+845 files in other folders)
